[tool.poetry]
name = "xmas"
version = "2018.1"
description = "A cat, sitting on a wall, near a Xmas tree, is gazing starry picturesque night."
authors = ["Nasy <nasyxx+git@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
include = ["poetry.lock", "xmas.cast"]

[tool.poetry.dependencies]
python = "^3.5.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
xmas = "xmas:main"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
