# [tool.poetry]
[project]
name = "xmas"
version = "2021.2"
description = ""
authors = [
    {name = "Nasy", email = "nasyxx+git@gmail.com"},
]
dependencies = []
requires-python = ">=3.7,<4.0"
license = {text = "GPL-3+"}

[project.urls]
homepage = "https://github.com/nasyxx/xmas.py"

[project.scripts]
xmas = "xmas:main"

[tool.black]
line-length = 79

[tool.pdm]
includes = ["README.md"]
[tool.pdm.dev-dependencies]
dev = []
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
